Add infrastructure to support summary stub locations

--- a/NAMESPACE
+++ b/NAMESPACE
@@ -20,6 +20,7 @@ export(cells_row_groups)
 export(cells_stub)
 export(cells_stubhead)
 export(cells_summary)
+export(cells_summary_stub)
 export(cells_title)
 export(cols_align)
 export(cols_hide)
